fix too long candidate/comment style for scroll mode

--- a/page/generic.scss
+++ b/page/generic.scss
@@ -110,6 +110,10 @@
       opacity: 1;
     }
 
+    .fcitx-comment {
+      overflow-wrap: anywhere; /* Disallow long comment to introduce horizontal scrollbar. */
+    }
+
     .fcitx-divider {
       flex-grow: 1;
     }
